--- a/work.html
+++ b/work.html
@@ -80,8 +80,8 @@
                 <div class="case-studies ">
                     <h3>case studies</h3>
                     <div class="p-div">
-                        <div class="fanhuddle">
-                            <div class="fan-details ">
+                        <div class="fanhuddle col-lg-12 mb-4">
+                            <div class="fan-details col-lg-6 col-md-6 mt-4">
                                 <div class="huddle">
                                     <p class="m-0">Fanhuddle</p>
                                     <p class="year">2023 - 2024</p>
@@ -90,12 +90,12 @@
                                     <p>Coming soon <img src="images/Coming soon icon.png" alt=""></p>
                                 </div>
                             </div>
-                            <div class="fanH-img">
+                            <div class="fanH-img col-lg-6 col-md-6 mt-4 p-0">
                                 <img src="images/fanhuddle project image.png" alt="">
                             </div>
                         </div>
-                        <div class="fanhuddle ">
-                            <div class="fan-details ">
+                        <div class="fanhuddle col-lg-12">
+                            <div class="fan-details col-lg-6 col-md-6 mt-4">
                                 <div class="huddle">
                                     <p class="m-0">Maplerad website<br>
                                         & dashboard</p>
@@ -105,7 +105,7 @@
                                     <p>Coming soon <img src="images/Coming soon icon.png" alt=""></p>
                                 </div>
                             </div>
-                            <div class="fanH-img">
+                            <div class="fanH-img col-lg-6 col-md-6 mt-4">
                                 <img src="images/Group 25.png" alt="">
                             </div>
                         </div>
