--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
             </div>
             <div class="work col-lg-7">
                 <h3>works</h3>
-                <div class="work-project-image ">
+                <div class="work-project-image">
                     <div class="img-div">
                         <a href="queues.html"><img src="images/Rectangle 4.png" alt="" class=""></a>
                     </div>
@@ -95,9 +95,9 @@
                             </div>
                         </div>
                         <div class="fanhuddle col-lg-12">
-                            <div class="fan-details col-lg-6 col-md-6 mt-4">
+                            <div class="fan-details col-lg-6 col-md-6 mt-2">
                                 <div class="huddle">
-                                    <p class="m-0">Maplerad website<br>
+                                    <p class="m-0 maplerad">Maplerad website<br>
                                         & dashboard</p>
                                     <p class="year">2022 - 2023</p>
                                 </div>
