--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
                         <a href="queues.html"><img src="images/Rectangle 4.png" alt="" class=""></a>
                     </div>
                     <div class="img-div">
-                        <img src="images/Rectangle 3.png" alt="" class="">
+                        <a href="zap.html"><img src="images/Rectangle 3.png" alt="" class=""></a>
                     </div>
                     <div class="img-div">
                         <img src="images/Rectangle 5.png" alt="" class="">
