--- a/queues-paint.html
+++ b/queues-paint.html
@@ -31,9 +31,9 @@
                 <p class="queue-back"><a href="work.html"><img src="images/ArrowLeft.png" class="arrowback" alt="">Back</a></p>
                 <h3>Queues</h3>
                 <div class="queue-project-image">
-                    <img src="images/zap.png" alt="">
+                    <img src="images/queues.png" alt="">
                 </div>
-                <p class="qWrite">Screens from Zap which is a ethereum wallet app that I was working on with my friend but we didn’t go through with it</p>
+                <p class="qWrite">Painting I did in procreate from reference</p>
             </div>
         </div>
     </div>
