--- a/queues.html
+++ b/queues.html
@@ -17,8 +17,8 @@
         </div>
     </div>
     <div>
-        <div class="PD">
-            <div class="nav_content">
+        <div class="PD row">
+            <div class="nav_content col-lg-3">
                 <ul class="nav">
                     <li><a href="about.html">about</a></li>
                     <li><a href="work.html">works</a></li>
@@ -27,7 +27,7 @@
                     <li><a href="">email</a></li>
                 </ul>
             </div>
-            <div class="queue">
+            <div class="work col-lg-7">
                 <p class="queue-back"><a href="work.html"><img src="images/ArrowLeft.png" class="arrowback" alt="">Back</a></p>
                 <h3>Queues</h3>
                 <div class="queue-project-image">
