--- a/work.html
+++ b/work.html
@@ -64,7 +64,7 @@
                         <a href="zap.html"><img src="images/Rectangle 3.png" alt="" class=""></a>
                     </div>
                     <div class="img-div">
-                        <img src="images/Rectangle 5.png" alt="" class="">
+                        <a href="queues-paint.html"><img src="images/Rectangle 5.png" alt="" class=""></a>
                     </div>
                     <div class="img-div">
                         <img src="images/Rectangle 7.png" alt="" class="">
