--- a/media.html
+++ b/media.html
@@ -18,7 +18,7 @@
     </div>
     <div class="">
         <div class="PD">
-            <div class="nav_content">
+            <div class="nav_content col-lg-3">
                     <ul class="nav">
                         <li><a href="about.html">about</a></li>
                         <li><a href="work.html">works</a></li>
@@ -27,41 +27,13 @@
                         <li><a href="">email</a></li>
                     </ul>
             </div>
-            <div class="media">
+            <div class="media work col-lg-7">
                 <h2 class="mb-4 recent">Media Diary</h2>
-                <div class="row mb-5 pe-0 mediaDiv">
-                    <div class="col-lg-3 imgDiv">
-                        <img src="images/game thumbnail.png" alt="" class="img-fluid">
-                    </div>
-                    <div class="col-lg-3 mt-4">
-                        <div class="movieDiv">
-                            <span class="movie">
-                                Movie
-                            </span>
-                        </div>
-                        <h2 class="title">Oppenheimer</h2>
-                        <span class="lb"><a href="">Letterboxd <img src="images//Next Arrow.png" alt=""></a></span>
-                    </div>
-                </div>
-                <div class="row mb-5 pe-0 mediaDiv">
-                    <div class="col-lg-3">
-                        <img src="images/game thumbnail (1).png" alt="" class="img-fluid ">
-                    </div>
-                    <div class="col-lg-3 mt-5">
-                        <div class="movieDiv">
-                            <span class="movie">
-                                Games
-                            </span>
-                        </div>
-                        <h2 class="title">The pathless</h2>
-                        <span class="lb"><a href="">See all games <img src="images//Next Arrow.png" alt=""></a></span>
-                    </div>
-                </div>
-                <div class="row mb-5 pe-0 mediaDiv">
-                    <div class="col-lg-3">
+                <div class="mediaDiv">
+                    <div class="">
                         <img src="images/game thumbnail (2).png" alt="" class="img-fluid" id="songImg">
                     </div>
-                    <div class="col-lg-3 book">
+                    <div class="detail book">
                         <div class="movieDiv">
                             <span class="movie">
                                 Music
@@ -72,11 +44,40 @@
                         <span class="lb"><a href="">Spotify <img src="images/Next Arrow.png" id="songImg" alt=""></a></span>
                     </div>
                 </div>
-                <div class="row mb-5 pe-0 mediaDiv">
-                    <div class="col-lg-3">
+                <div class="mediaDiv">
+                    <div class="imgDiv">
+                        <img src="images/game thumbnail.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="mt-4 detail">
+                        <div class="movieDiv">
+                            <span class="movie">
+                                Movie
+                            </span>
+                        </div>
+                        <h2 class="title">Oppenheimer</h2>
+                        <span class="lb"><a href="">Letterboxd <img src="images//Next Arrow.png" alt=""></a></span>
+                    </div>
+                </div>
+                <div class="mediaDiv">
+                    <div class="">
+                        <img src="images/game thumbnail (1).png" alt="" class="img-fluid ">
+                    </div>
+                    <div class="detail mt-5">
+                        <div class="movieDiv">
+                            <span class="movie">
+                                Games
+                            </span>
+                        </div>
+                        <h2 class="title">The pathless</h2>
+                        <span class="lb"><a href="">See all games <img src="images//Next Arrow.png" alt=""></a></span>
+                    </div>
+                </div>
+                
+                <div class="mediaDiv">
+                    <div class="">
                         <img src="images/game thumbnail (3).png" alt="" class="img-fluid ">
                     </div>
-                    <div class="col-lg-3 book">
+                    <div class="detail book">
                         <div class="movieDiv">
                             <span class="movie">
                                 Books
@@ -87,20 +88,7 @@
                         <span class="lb"><a href="">Read review<img src="images/Next Arrow.png" alt=""></a></span>
                     </div>
                 </div>
-                <div class="row mb-5 pe-0 mediaDiv">
-                    <div class="col-lg-3">
-                        <img src="images/game thumbnail (4).png" alt="" class="img-fluid ">
-                    </div>
-                    <div class="col-lg-3 mt-5">
-                        <div class="movieDiv">
-                            <span class="movie">
-                                Games
-                            </span>
-                        </div>
-                        <h2 class="title">Hades</h2>
-                        <span class="lb"><a href="">See all games <img src="images/Next Arrow.png" class="filter_icon" alt=""></a></span>
-                    </div>
-                </div>
+                 
             </div>
         </div>
 
