--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,21 @@
                     <li><a href="">email</a></li>
                 </ul>
             </div>
+            <div class="work col-lg-7">
+                <p>creative designer</p>
+                <div>
+                    <p>Find me on</p>
+                    <ul>
+                        <li><a href="">Are.na</a></li>
+                        <li><a href="">Twitter</a></li>
+                        <li><a href="">Read.cv</a></li>
+                        <li><a href="">Dribble</a></li>
+                        <li><a href="">Instagram</a></li>
+                    </ul>
+                </div>
             </div>
-            </div>
+        </div>
+    </div>
     </div>
 </body>
 
