--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 <p>creative designer</p>
                 <div>
                     <p>Find me on</p>
-                    <ul>
+                    <ul class="contact_link">
                         <li><a href="">Are.na</a></li>
                         <li><a href="">Twitter</a></li>
                         <li><a href="">Read.cv</a></li>
