--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                 </ul>
             </div>
             <div class="work col-lg-7">
-                <p>creative designer</p>
+                <p class="design">creative designer</p>
                 <div>
                     <p>Find me on</p>
                     <ul class="contact_link">
